# Seagull

./: .gitignore  CLAUDE.md  CLAUDE.md.tmp.2520.42cd7a7ec0df  DISCLAIMER.md  FAQ.md  README.md  THIRD_PARTY_NOTICES.md  amend-msg.txt
Seagull/: CMakeLists.txt  Seagull.cpp  Seagull.cpp.tmp.35288.1288a07b9da7  Seagull.h  app.rc  repo_tree.txt  resources.qrc
Seagull/Modules/Backend/: PlaybackEngine.cpp  PlaybackEngine.h  SgAppUpdate.cpp  SgAppUpdate.h  SgDownloadHistory.cpp  SgDownloadHistory.h  SgDynamics.cpp  SgDynamics.h  SgEq.cpp  SgEq.h  SgFavorites.cpp  SgFavorites.h  SgFormat.cpp  SgFormat.h  SgHlsProxy.cpp  SgHlsProxy.h  SgLog.cpp  SgLog.h  SgMediaControls.cpp  SgMediaControls.h  SgMetaCache.cpp  SgMetaCache.h  SgOptions.cpp  SgOptions.h  SgPaths.cpp  SgPaths.h  SgRecorder.cpp  SgRecorder.h  SgSearch.cpp  SgSearch.h  SgSpellCheck.cpp  SgSpellCheck.h  SgThumbnailer.cpp  SgThumbnailer.h  SgUpdater.cpp  SgUpdater.h  SgWatchHistory.cpp  SgWatchHistory.h  SgYtDlp.cpp  SgYtDlp.h
Seagull/Modules/UI/: DownloadManager.cpp  DownloadManager.h  Downloads.cpp  Downloads.h  EQ.cpp  EQ.h  FileExplorer.cpp  FileExplorer.h  Library.cpp  Library.h  MainWindow.cpp  MainWindow.h  MediaLibrary.cpp  MediaLibrary.h  Queue.cpp  Queue.h  Search.cpp  Search.h  Settings.cpp  Settings.h  SetupDialog.cpp  SetupDialog.h  Theme.cpp  Theme.h  VideoPlayer.cpp  VideoPlayer.h
Seagull/Modules/UI/Widgets/: CircleGlyphButton.cpp  CircleGlyphButton.h  ClickSlider.h  DownloadRow.cpp  DownloadRow.h  FlowLayout.cpp  FlowLayout.h  MarqueeLabel.cpp  MarqueeLabel.h  PlayerControls.cpp  PlayerControls.h  PlayerTitleBar.cpp  PlayerTitleBar.h  SpellCheckLineEdit.cpp  SpellCheckLineEdit.h  UpdateDialog.cpp  UpdateDialog.h  VideoCard.cpp  VideoCard.h  Visualizer.cpp  Visualizer.h
Seagull/sdk/include/vlc/: libvlc_media.h
Seagull/sdk/include/vlcpp/: common.hpp
docs/: ARCHITECTURE.md  FAQ.md  README.md
